--- a/public/index1.css
+++ b/public/index1.css
@@ -10,6 +10,11 @@
    
     z-index: 999;   /* 层级更高，优先显示 */
 }
+
+.beijing11{
+    text-align: center;
+    margin-top: 20px;
+ }
 .beijing1{
    text-align: center;
    margin-top: 20px;
@@ -18,6 +23,7 @@
     background:url(/public/images/paipai.png)no-repeat;
     background-size: 100% 100%;
     height: 70px;
+    color: rgb(250, 236, 181);
     /* margin-top: -30px; */
 }
 /* 音乐图 */
@@ -67,6 +73,8 @@
     text-decoration: none;
 }
 .bianqian1 a:hover{
+    /* color: cornsilk; */
+    /* margin-top: 15px; */
     /* font-size: 25px; */
     /* background: rgb(250, 248, 248); */
     text-shadow: 0 1px 1px rgba(100,100,100,0.8);
@@ -132,12 +140,12 @@
 /* 导航条 */
 /* 左边部分 */
 .wenzi{
-    width: 40px;
+    width: 350px;
     height: 50px;
     font-size: 25px;
-    color: rgb(51, 48, 245);
+    color: rgb(237, 237, 243);
    
-      /* z-index: 20; */
+    
 }
 .main {  
     margin-top: -20px;
@@ -200,10 +208,10 @@
     height: 360px;
     margin: 0;
     padding: 0;
-    border: 2px solid  rgb(118,173,210);
+    /* border: 2px solid  rgb(118,173,210); */
     border-left: none;
     border-radius: 10px;
-    box-shadow: 2px 2px 10px 1px rgb(202, 210, 236);
+    /* box-shadow: 2px 2px 10px 1px rgb(202, 210, 236); */
     position: fixed;
     border-radius: 10px;
     /* z-index: 10; */
@@ -451,7 +459,7 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: url(/public/images/touxiang.jpg);
+    background: url(/public/images/qq.jpg);
     transition: all .5s;
     /* z-index: 1200; */
     /* opacity: 1; */
@@ -566,7 +574,7 @@
     width:100%;
     height:40px ;
     margin-top: 40px;
-    margin-left: -130px;
+    margin-left: -120px;
     /* margin-top: 130px; */
     text-align: center;
     font-size: 20px;
